jaeger-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jaeger
  namespace: jaeger
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: jaeger.kubernetes.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: jaeger-query
          servicePort: 80
